--- a/templates/metier/show.html.twig
+++ b/templates/metier/show.html.twig
@@ -16,6 +16,14 @@
                 <th class="py-2 px-4 border">Nom</th>
                 <td class="py-2 px-4 border">{{ metier.nom }}</td>
             </tr>
+            <tr class="border-b">
+                <th class="py-2 px-4 border">Nom</th>
+                <td class="py-2 px-4 border">{{ metier.competence }}</td>
+            </tr>
+            <tr class="border-b">
+                <th class="py-2 px-4 border">Nom</th>
+                <td class="py-2 px-4 border">{{ metier.activite }}</td>
+            </tr>
             </tbody>
         </table>
 
