--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -11,6 +11,7 @@
             <tr>
                 <th class="py-2 px-4 border">Id</th>
                 <th class="py-2 px-4 border">Nom</th>
+                <th class="py-2 px-4 border">Intervenant</th>
                 <th class="py-2 px-4 border">Salle</th>
                 <th class="py-2 px-4 border">Secteur</th>
                 <th class="py-2 px-4 border">Ressource</th>
@@ -22,6 +23,7 @@
                 <tr class="border-b">
                     <td class="py-2 px-4 border">{{ atelier.id }}</td>
                     <td class="py-2 px-4 border">{{ atelier.nom }}</td>
+                    <td class="py-2 px-4 border">{{ atelier.intervenant }}</td>
                     <td class="py-2 px-4 border">{{ atelier.salle }}</td>
                     <td class="py-2 px-4 border">{{ atelier.secteur }}</td>
                     <td class="py-2 px-4 border">{{ atelier.ressource }}</td>
