--- a/templates/atelier/show.html.twig
+++ b/templates/atelier/show.html.twig
@@ -17,6 +17,10 @@
                 <td class="py-2 px-4 border">{{ atelier.nom }}</td>
             </tr>
             <tr>
+                <th class="py-2 px-4 border">Nom</th>
+                <td class="py-2 px-4 border">{{ atelier.intervenant }}</td>
+            </tr>
+            <tr>
                 <th class="py-2 px-4 border">Salle</th>
                 <td class="py-2 px-4 border">{{ atelier.salle }}</td>
             </tr>
