--- a/templates/section/show.html.twig
+++ b/templates/section/show.html.twig
@@ -12,8 +12,8 @@
                 <td>{{ section.id }}</td>
             </tr>
             <tr>
-                <th>Nnom</th>
-                <td>{{ section.nnom }}</td>
+                <th>Nom</th>
+                <td>{{ section.nom }}</td>
             </tr>
         </tbody>
     </table>
