--- a/templates/section/index.html.twig
+++ b/templates/section/index.html.twig
@@ -17,7 +17,7 @@
         {% for section in sections %}
             <tr>
                 <td>{{ section.id }}</td>
-                <td>{{ section.nnom }}</td>
+                <td>{{ section.nom }}</td>
                 <td>
                     <a href="{{ path('app_section_show', {'id': section.id}) }}">show</a>
                     <a href="{{ path('app_section_edit', {'id': section.id}) }}">edit</a>
