--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -77,11 +77,15 @@
                         <p class="text-gray-600 text-sm mb-2">
                             <span class="font-semibold">Secteur :</span> {{ atelier.getSecteur() }}
                         </p>
-                        <div class="flex items-center justify-center">
-                            <p class="inline-block px-5 bg-blue-500 text-white border rounded">
+                        <div class="flex flex-col gap-2 items-center justify-center">
+                            <p class="inline-block px-5 bg-gray-500 text-white border rounded">
                                 <span class="font-semibold">Intervenant(s):</span> {{ atelier.getIntervenant() }}
                             </p>
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white font-semibold px-2 border border-blue-500 rounded">
+                                Détail
+                            </button>
                         </div>
+
                         <!-- Ajoutez d'autres informations selon vos besoins -->
                     </div>
 
