--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
     <div class="flex items-center justify-end gap-x-2 bg-blue-500 text-white text-xl">
         {% if app.user %}
             <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('homepage') }}">Accueil</a>
-            {% if 'ROLE_STUDENT' in app.user.roles %}
+            {% if is_granted('ROLE_STUDENT') %}
                 <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('user-profile', {'id': app.user.getInscriptionId()}) }}">{{ app.user.email }}</a>
             {% endif %}
             <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('logout') }}">Se déconnecter</a>
