--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -69,7 +69,13 @@
                             <span class="font-semibold">Salle :</span> {{ atelier.getSalle() }}
                         </p>
                         <p class="text-gray-600 text-sm mb-2">
-                            <span class="font-semibold">Métier :</span> {{ atelier.getMetier() }}
+                            <span class="font-semibold">Métier(s) :
+                            {% for metier in atelier.getMetier() %}
+                                {{ metier.getNom() }}{% if not loop.last %}, {% endif %}
+                            {% else %}
+                                Aucun métier associé
+                            {% endfor %}
+                        </span>
                         </p>
                         <p class="text-gray-600 text-sm mb-2">
                             <span class="font-semibold">Ressource :</span> {{ atelier.getRessource() }}
