--- a/templates/adminUser/metier/_form.html.twig
+++ b/templates/adminUser/metier/_form.html.twig
@@ -21,7 +21,7 @@
         {{ form_widget(field, {'attr': {'class': 'hidden'}}) }}
     {% endif %}
 {% endfor %}
-<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
     <i class="fa-solid fa-floppy-disk fa-xl"></i>
 </button>
 {{ form_end(form) }}
