--- a/templates/adminUser/atelier/_form.html.twig
+++ b/templates/adminUser/atelier/_form.html.twig
@@ -1,9 +1,27 @@
-{{ form_start(form, {'attr': {'class': 'max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md'}}) }}
-
-{% for child in form.children %}
-    {{ form_row(child, {'attr': {'class': 'w-full p-2 mb-4 border rounded-md'}}) }}
+{{ form_start(form, {'attr': {'class': 'space-y-6 mb-4'}}) }}
+{% for field in form %}
+    {% if field.vars.name != '_token' %}
+        <div class="mb-4">
+            {{ form_label(field) }}
+            {% if field.vars.full_name matches '/ressource|salle|metier/' %}
+                <div class="mt-2">
+                    {% for child in field %}
+                        <div class="flex items-center mb-2">
+                            {{ form_widget(child, {'attr': {'class': 'shadow border rounded mr-2 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+                            {{ form_label(child, null, {'label_attr': {'class': 'text-gray-700'}}) }}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form_widget(field, {'attr': {'class': 'shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+            {% endif %}
+            {{ form_errors(field) }}
+        </div>
+    {% else %}
+        {{ form_widget(field, {'attr': {'class': 'hidden'}}) }}
+    {% endif %}
 {% endfor %}
-
-<button type="submit" class="btn bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none">{{ button_label|default('Save') }}</button>
-
+<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
+    <i class="fa-solid fa-floppy-disk fa-xl"></i>
+</button>
 {{ form_end(form) }}
