--- a/templates/adminUser/atelier/index.html.twig
+++ b/templates/adminUser/atelier/index.html.twig
@@ -1,54 +1,73 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Atelier index{% endblock %}
+{% block title %}Ateliers{% endblock %}
 
 {% block body %}
-    <div class="max-w-2xl mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Atelier index</h1>
+    <div class="max-w-5xl mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
+        <h1 class="text-2xl font-semibold mb-6">Ateliers</h1>
 
-        <table class="table">
+        <table class="min-w-full leading-normal">
             <thead>
             <tr>
-                <th class="py-2 px-4 border">Id</th>
-                <th class="py-2 px-4 border">Nom</th>
-                <th class="py-2 px-4 border">Intervenant</th>
-                <th class="py-2 px-4 border">Salle</th>
-                <th class="py-2 px-4 border">Secteur</th>
-                <th class="py-2 px-4 border">Ressource</th>
-                <th class="py-2 px-4 border">Métiers</th>
-                <th class="py-2 px-4 border">Actions</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Intervenant</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Métier</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Salle</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Ressource</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de début</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de fin</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
             </tr>
             </thead>
             <tbody>
             {% for atelier in ateliers %}
-                <tr class="border-b">
-                    <td class="py-2 px-4 border">{{ atelier.id }}</td>
-                    <td class="py-2 px-4 border">{{ atelier.nom }}</td>
-                    <td class="py-2 px-4 border">{{ atelier.intervenant }}</td>
-                    <td class="py-2 px-4 border">{{ atelier.salle }}</td>
-                    <td class="py-2 px-4 border">{{ atelier.secteur }}</td>
-                    <td class="py-2 px-4 border">{{ atelier.ressource }}</td>
-                    <td class="py-2 px-4 border">
+                <tr>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.id }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.nom }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.intervenant ? atelier.intervenant : 'Non défini' }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                         {% for metiers in atelier.metier %}
                             {{ metiers.nom }}{% if not loop.last %}, {% endif %}
                         {% else %}
-                            Aucun métier
+                            Aucun métier(s)
                         {% endfor %}
                     </td>
-
-                    <td class="py-2 px-4 border">
-                        <a href="{{ path('app_atelier_show', {'id': atelier.id}) }}" class="text-blue-500 hover:underline">show</a>
-                        <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}" class="text-yellow-500 hover:underline">edit</a>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        {% for salles in atelier.salle %}
+                            {{ salles.nom }}{% if not loop.last %}, {% endif %}
+                        {% else %}
+                            Aucune salle(s)
+                        {% endfor %}
+                    </td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        {% for ressources in atelier.ressource %}
+                            {{ ressources.type }}{% if not loop.last %}, {% endif %}
+                        {% else %}
+                            Aucune ressource(s)
+                        {% endfor %}
+                    </td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateDebut ? atelier.getDateDebut()|date('d-m-Y') : 'Non défini' }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateFin ? atelier.getDateFin()|date('d-m-Y') : 'Non défini' }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        <a href="{{ path('app_atelier_show', {'id': atelier.id}) }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                            <i class="fa-regular fa-eye fa-xl"></i>
+                        </a>
+                        <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
+                            <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                        </a>
                     </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="3" class="py-2 px-4 border">No records found</td>
+                    <td colspan="3" class="px-5 py-5 border-b border-gray-200 bg-white text-sm">Aucun enregistrement trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
 
-        <a href="{{ path('app_atelier_new') }}" class="block mt-4 text-blue-500 hover:underline">Create new</a>
+        <a href="{{ path('app_atelier_new') }}" class="mt-4 bg-green-500 hover:bg-green-700 text-white p-2 rounded inline-block">
+            <i class="fa-solid fa-plus fa-xl"></i>
+        </a>
     </div>
 {% endblock %}
