--- a/templates/adminUser/atelier/show.html.twig
+++ b/templates/adminUser/atelier/show.html.twig
@@ -3,50 +3,78 @@
 {% block title %}Atelier{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Atelier</h1>
+    <div class="max-w-5xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <div class="flex my-4">
+            <a href="{{ path('app_atelier_index') }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                <i class="fa-solid fa-arrow-left fa-xl"></i>
+            </a>
+        </div>
+        <h1 class="text-2xl font-semibold mb-6 text-start">Atelier</h1>
 
-        <table class="table">
+        <table class="min-w-full leading-normal">
             <tbody>
-            <tr>
-                <th class="py-2 px-4 border">Id</th>
-                <td class="py-2 px-4 border">{{ atelier.id }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.id }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Nom</th>
-                <td class="py-2 px-4 border">{{ atelier.nom }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.nom }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Intervenant</th>
-                <td class="py-2 px-4 border">{{ atelier.intervenant }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Intervenant</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.intervenant ? atelier.intervenant : 'Non défini' }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Salle</th>
-                <td class="py-2 px-4 border">{{ atelier.salle }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Secteur</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.secteur }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Secteur</th>
-                <td class="py-2 px-4 border">{{ atelier.secteur }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Salle</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    {% for salles in atelier.salle %}
+                        {{ salles.nom }}{% if not loop.last %}, {% endif %}
+                    {% else %}
+                        Aucune salle associé
+                    {% endfor %}
+                </td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Ressource</th>
-                <td class="py-2 px-4 border">{{ atelier.ressource }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Ressource</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    {% for ressources in atelier.ressource %}
+                        {{ ressources.type }}{% if not loop.last %}, {% endif %}
+                    {% else %}
+                        Aucune ressource associé
+                    {% endfor %}
+                </td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Date de début</th>
-                <td class="py-2 px-4 border">{{ atelier.getDateDebut()|date('Y-m-d') }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Métier</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    {% for metiers in atelier.metier %}
+                        {{ metiers.nom }}{% if not loop.last %}, {% endif %}
+                    {% else %}
+                        Aucun métier associé
+                    {% endfor %}
+                </td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Date de fin</th>
-                <td class="py-2 px-4 border">{{ atelier.getDateFin()|date('Y-m-d') }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de début</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateDebut ? atelier.getDateDebut()|date('d-m-Y') : 'Non défini' }}</td>
+            </tr>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de fin</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateFin ? atelier.getDateFin()|date('d-m-Y') : 'Non défini' }}</td>
             </tr>
             </tbody>
         </table>
 
-        <a href="{{ path('app_atelier_index') }}" class="block mt-4 text-blue-500 hover:underline">Back to list</a>
-
-        <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}" class="block mt-2 text-yellow-500 hover:underline">Edit</a>
-
-        {{ include('adminUser/atelier/_delete_form.html.twig') }}
+        <div class="flex justify-start space-x-2 mt-4">
+            <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
+                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+            </a>
+            {{ include('adminUser/atelier/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
