--- a/templates/adminUser/competence/new.html.twig
+++ b/templates/adminUser/competence/new.html.twig
@@ -1,13 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Competence{% endblock %}
+{% block title %}Nouvelle Compétence{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Create new Competence</h1>
+    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <a href="{{ path('app_competence_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
+            <i class="fa-solid fa-arrow-left fa-xl"></i>
+        </a>
+        <h1 class="text-2xl font-semibold mb-6">Créer une nouvelle compétence</h1>
 
         {{ include('adminUser/competence/_form.html.twig') }}
 
-        <a href="{{ path('app_competence_index') }}" class="block mt-4 text-blue-500 hover:underline">Back to list</a>
     </div>
 {% endblock %}
