--- a/templates/adminUser/inscription/edit.html.twig
+++ b/templates/adminUser/inscription/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Lycéen{% endblock %}
+{% block title %}Editer Lycéen{% endblock %}
 
 {% block body %}
     <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <a href="{{ path('app_inscription_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </a>
-        <h1 class="text-2xl font-semibold mb-6">Editer un Lycéen</h1>
+        <h1 class="text-2xl font-semibold mb-6">Editer un lycéen</h1>
 
         <div class="flex flex-row gap-5">
 
