--- a/templates/adminUser/inscription/new.html.twig
+++ b/templates/adminUser/inscription/new.html.twig
@@ -7,7 +7,7 @@
         <a href="{{ path('app_inscription_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </a>
-        <h1 class="text-2xl font-semibold mb-6">Créer un nouveau Lycéen</h1>
+        <h1 class="text-2xl font-semibold mb-6">Créer un nouveau lycéen</h1>
 
         {{ include('adminUser/inscription/_form.html.twig') }}
 
