--- a/templates/adminUser/lycee/edit.html.twig
+++ b/templates/adminUser/lycee/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Lycee{% endblock %}
+{% block title %}Éditer Lycée{% endblock %}
 
 {% block body %}
-    <h1>Edit Lycee</h1>
+    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <a href="{{ path('app_lycee_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
+            <i class="fa-solid fa-arrow-left fa-xl"></i>
+        </a>
+        <h1 class="text-2xl font-semibold mb-6">Éditer un lycée</h1>
 
-    {{ include('adminUser/lycee/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('adminUser/lycee/_form.html.twig') }}
 
-    <a href="{{ path('app_lycee_index') }}">back to list</a>
-
-    {{ include('adminUser/lycee/_delete_form.html.twig') }}
+        {{ include('adminUser/lycee/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
