--- a/templates/adminUser/metier/edit.html.twig
+++ b/templates/adminUser/metier/edit.html.twig
@@ -1,17 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Éditer un Métier{% endblock %}
+{% block title %}Éditer Métier{% endblock %}
 
 {% block body %}
     <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <a href="{{ path('app_metier_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </a>
-        <h1 class="text-2xl font-semibold mb-6">Éditer un Métier</h1>
-
-        <div class="flex flex-row gap-5">
-            <!-- Ajoutez ici des champs de formulaire d'édition du métier si nécessaire -->
-        </div>
+        <h1 class="text-2xl font-semibold mb-6">Éditer un métier</h1>
 
         {{ include('adminUser/metier/_form.html.twig') }}
 
