--- a/templates/adminUser/ressource/edit.html.twig
+++ b/templates/adminUser/ressource/edit.html.twig
@@ -1,14 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Ressource{% endblock %}
+{% block title %}Éditer Ressource{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Edit Ressource</h1>
+    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <a href="{{ path('app_ressource_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
+            <i class="fa-solid fa-arrow-left fa-xl"></i>
+        </a>
+        <h1 class="text-2xl font-semibold mb-6">Éditer une ressource</h1>
 
-        {{ include('adminUser/ressource/_form.html.twig', {'button_label': 'Update'}) }}
-
-        <a href="{{ path('app_ressource_index') }}" class="block mt-4 text-blue-500 hover:underline">Back to list</a>
+        {{ include('adminUser/ressource/_form.html.twig') }}
 
         {{ include('adminUser/ressource/_delete_form.html.twig') }}
     </div>
