--- a/templates/adminUser/ressource/index.html.twig
+++ b/templates/adminUser/ressource/index.html.twig
@@ -1,39 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ressource index{% endblock %}
+{% block title %}Ressources{% endblock %}
 
 {% block body %}
-    <div class="max-w-2xl mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Ressource index</h1>
+    <div class="max-w-5xl mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
+        <h1 class="text-2xl font-semibold mb-6">Ressources</h1>
 
-        <table class="table">
+        <table class="min-w-full leading-normal">
             <thead>
             <tr>
-                <th class="py-2 px-4 border">Id</th>
-                <th class="py-2 px-4 border">Type</th>
-                <th class="py-2 px-4 border">Contenu</th>
-                <th class="py-2 px-4 border">Actions</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Type</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Contenu</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
             </tr>
             </thead>
             <tbody>
             {% for ressource in ressources %}
-                <tr class="border-b">
-                    <td class="py-2 px-4 border">{{ ressource.id }}</td>
-                    <td class="py-2 px-4 border">{{ ressource.type }}</td>
-                    <td class="py-2 px-4 border">{{ ressource.contenu }}</td>
-                    <td class="py-2 px-4 border">
-                        <a href="{{ path('app_ressource_show', {'id': ressource.id}) }}" class="text-blue-500 hover:underline">show</a>
-                        <a href="{{ path('app_ressource_edit', {'id': ressource.id}) }}" class="text-yellow-500 hover:underline">edit</a>
+                <tr>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ ressource.id }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ ressource.type }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ ressource.contenu }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        <a href="{{ path('app_ressource_show', {'id': ressource.id}) }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                            <i class="fa-regular fa-eye fa-xl"></i>
+                        </a>
+                        <a href="{{ path('app_ressource_edit', {'id': ressource.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded ml-4">
+                            <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                        </a>
                     </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td class="py-2 px-4 border" colspan="4">No records found</td>
+                    <td colspan="3" class="px-5 py-5 border-b border-gray-200 bg-white text-sm">Aucun enregistrement trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
 
-        <a href="{{ path('app_ressource_new') }}" class="block mt-4 text-blue-500 hover:underline">Create new</a>
+        <a href="{{ path('app_ressource_new') }}" class="mt-4 bg-green-500 hover:bg-green-700 text-white p-2 rounded inline-block">
+            <i class="fa-solid fa-plus fa-xl"></i>
+        </a>
     </div>
 {% endblock %}
