--- a/templates/adminUser/salle/_delete_form.html.twig
+++ b/templates/adminUser/salle/_delete_form.html.twig
@@ -1,4 +1,6 @@
 <form method="post" action="{{ path('app_salle_delete', {'id': salle.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ salle.id) }}">
-    <button class="btn bg-red-500 text-white p-2 rounded-md hover:bg-red-600 focus:outline-none">Delete</button>
+    <button type="submit" class="inline-block bg-red-500 hover:bg-red-700 text-white p-2 rounded">
+        <i class="fa-solid fa-trash fa-xl"></i>
+    </button>
 </form>
