--- a/templates/adminUser/salle/show.html.twig
+++ b/templates/adminUser/salle/show.html.twig
@@ -3,34 +3,39 @@
 {% block title %}Salle{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
-        <h1 class="text-2xl font-semibold mb-6">Salle</h1>
+    <div class="max-w-5xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <div class="flex my-4">
+            <a href="{{ path('app_salle_index') }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                <i class="fa-solid fa-arrow-left fa-xl"></i>
+            </a>
+        </div>
+        <h1 class="text-2xl font-semibold mb-6 text-start">Salle</h1>
 
-        <table class="table">
+        <table class="min-w-full leading-normal">
             <tbody>
-            <tr>
-                <th class="py-2 px-4 border">Id</th>
-                <td class="py-2 px-4 border">{{ salle.id }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ salle.id }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Nom</th>
-                <td class="py-2 px-4 border">{{ salle.nom }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ salle.nom }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Etage</th>
-                <td class="py-2 px-4 border">{{ salle.etage }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Etage</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ salle.etage }}</td>
             </tr>
-            <tr>
-                <th class="py-2 px-4 border">Capacite_maximum</th>
-                <td class="py-2 px-4 border">{{ salle.capaciteMaximum }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Capacité maximum</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ salle.getCapaciteMaximum }}</td>
             </tr>
             </tbody>
         </table>
-
-        <a href="{{ path('app_salle_index') }}" class="block mt-4 text-blue-500 hover:underline">Back to list</a>
-
-        <a href="{{ path('app_salle_edit', {'id': salle.id}) }}" class="block mt-2 text-yellow-500 hover:underline">Edit</a>
-
-        {{ include('adminUser/salle/_delete_form.html.twig') }}
+        <div class="flex justify-start space-x-2 mt-4">
+            <a href="{{ path('app_salle_edit', {'id': salle.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
+                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+            </a>
+            {{ include('adminUser/salle/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
