--- a/templates/adminUser/secteur/_form.html.twig
+++ b/templates/adminUser/secteur/_form.html.twig
@@ -1,4 +1,16 @@
-{{ form_start(form, {'attr': {'class': 'max-w-md mx-auto mt-8 p-6 bg-white rounded-md shadow-md'}}) }}
-    {{ form_widget(form, {'attr': {'class': 'w-full gap-2 p-2 mb-4 border rounded-md'}}) }}
-<button class="btn bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'space-y-6 mb-4'}}) }}
+{% for field in form %}
+    {% if field.vars.name != '_token' %} {# Ne pas afficher le champ Token #}
+        <div class="mb-4">
+            {{ form_label(field) }}
+            {{ form_widget(field, {'attr': {'class': 'shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+            {{ form_errors(field) }}
+        </div>
+    {% else %}
+        {{ form_widget(field, {'attr': {'class': 'hidden'}}) }} {# Rendre le champ Token caché #}
+    {% endif %}
+{% endfor %}
+<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
+    <i class="fa-solid fa-floppy-disk fa-xl"></i>
+</button>
 {{ form_end(form) }}
