--- a/templates/adminUser/section/edit.html.twig
+++ b/templates/adminUser/section/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Section{% endblock %}
+{% block title %}Éditer Section{% endblock %}
 
 {% block body %}
-    <h1>Edit Section</h1>
+    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <a href="{{ path('app_section_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
+            <i class="fa-solid fa-arrow-left fa-xl"></i>
+        </a>
+        <h1 class="text-2xl font-semibold mb-6">Éditer une section</h1>
 
-    {{ include('adminUser/section/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('adminUser/section/_form.html.twig') }}
 
-    <a href="{{ path('app_section_index') }}">back to list</a>
-
-    {{ include('adminUser/section/_delete_form.html.twig') }}
+        {{ include('adminUser/section/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
