--- a/templates/adminUser/section/index.html.twig
+++ b/templates/adminUser/section/index.html.twig
@@ -1,35 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Section index{% endblock %}
+{% block title %}Sections{% endblock %}
 
 {% block body %}
-    <h1>Section index</h1>
+    <div class="max-w-5xl mx-auto mt-8 p-6 bg-white rounded-md shadow-md">
+        <h1 class="text-2xl font-semibold mb-6">Sections</h1>
 
-    <table class="table">
-        <thead>
+        <table class="min-w-full leading-normal">
+            <thead>
             <tr>
-                <th>Id</th>
-                <th>Nnom</th>
-                <th>actions</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for section in sections %}
-            <tr>
-                <td>{{ section.id }}</td>
-                <td>{{ section.nom }}</td>
-                <td>
-                    <a href="{{ path('app_section_show', {'id': section.id}) }}">show</a>
-                    <a href="{{ path('app_section_edit', {'id': section.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for section in sections %}
+                <tr>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ section.id }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ section.nom }}</td>
+                    <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                        <a href="{{ path('app_section_show', {'id': section.id}) }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                            <i class="fa-regular fa-eye fa-xl"></i>
+                        </a>
+                        <a href="{{ path('app_section_edit', {'id': section.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded ml-4">
+                            <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                        </a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3" class="px-5 py-5 border-b border-gray-200 bg-white text-sm">Aucun enregistrement trouvé</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_section_new') }}">Create new</a>
+        <a href="{{ path('app_section_new') }}" class="mt-4 bg-green-500 hover:bg-green-700 text-white p-2 rounded inline-block">
+            <i class="fa-solid fa-plus fa-xl"></i>
+        </a>
+    </div>
 {% endblock %}
