--- a/templates/adminUser/section/new.html.twig
+++ b/templates/adminUser/section/new.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Section{% endblock %}
+{% block title %}Nouveau Section{% endblock %}
 
 {% block body %}
-    <h1>Create new Section</h1>
+    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <a href="{{ path('app_section_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
+            <i class="fa-solid fa-arrow-left fa-xl"></i>
+        </a>
+        <h1 class="text-2xl font-semibold mb-6">Créer une nouvelle section</h1>
 
-    {{ include('adminUser/section/_form.html.twig') }}
+        {{ include('adminUser/section/_form.html.twig') }}
 
-    <a href="{{ path('app_section_index') }}">back to list</a>
+    </div>
 {% endblock %}
