--- a/templates/adminUser/section/show.html.twig
+++ b/templates/adminUser/section/show.html.twig
@@ -3,24 +3,31 @@
 {% block title %}Section{% endblock %}
 
 {% block body %}
-    <h1>Section</h1>
+    <div class="max-w-5xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+        <div class="flex my-4">
+            <a href="{{ path('app_section_index') }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
+                <i class="fa-solid fa-arrow-left fa-xl"></i>
+            </a>
+        </div>
+        <h1 class="text-2xl font-semibold mb-6 text-start">Section</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ section.id }}</td>
+        <table class="min-w-full leading-normal">
+            <tbody>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ section.id }}</td>
             </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ section.nom }}</td>
+            <tr class="border-b">
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ section.nom }}</td>
             </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_section_index') }}">back to list</a>
-
-    <a href="{{ path('app_section_edit', {'id': section.id}) }}">edit</a>
-
-    {{ include('adminUser/section/_delete_form.html.twig') }}
+            </tbody>
+        </table>
+        <div class="flex justify-start space-x-2 mt-4">
+            <a href="{{ path('app_section_edit', {'id': section.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
+                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+            </a>
+            {{ include('adminUser/section/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
