--- a/templates/adminUser/atelier/_form.html.twig
+++ b/templates/adminUser/atelier/_form.html.twig
@@ -21,7 +21,15 @@
         {{ form_widget(field, {'attr': {'class': 'hidden'}}) }}
     {% endif %}
 {% endfor %}
-<button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
-    <i class="fa-solid fa-floppy-disk fa-xl"></i>
-</button>
+
+        <div class="inline-flex justify-end space-x-2 mt-8 w-full">
+            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
+                Valider {#<i class="fa-solid fa-floppy-disk fa-xl"></i>#}
+            </button>
+            {% if deleteBtn %}
+                <a href="{{ path('app_atelier_delete', {'id': atelier.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded">
+                    Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}
+                </a>
+            {% endif %}
+        </div>
 {{ form_end(form) }}
