--- a/templates/adminUser/atelier/edit.html.twig
+++ b/templates/adminUser/atelier/edit.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Éditer Atelier{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
+    <div class="max-w-3xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <a href="{{ path('app_atelier_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
-            <i class="fa-solid fa-arrow-left fa-xl"></i>
+            <p>Back {#<i class="fa-solid fa-arrow-left fa-xl"></i>#}</p>
         </a>
-        <h1 class="text-2xl font-semibold mb-6">Éditer un atelier</h1>
+        <h1 class="text-2xl font-semibold mb-6 text-center">Éditer un atelier</h1>
 
-        {{ include('adminUser/atelier/_form.html.twig') }}
+        {% include "'adminUser/atelier/_form.html.twig" with {deleteBtn: true} %}
 
         {{ include('adminUser/atelier/_delete_form.html.twig') }}
     </div>
