--- a/templates/adminUser/atelier/show.html.twig
+++ b/templates/adminUser/atelier/show.html.twig
@@ -14,23 +14,23 @@
         <table class="min-w-full leading-normal">
             <tbody>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.id }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.nom }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Intervenant</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Intervenant</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.intervenant ? atelier.intervenant : 'Non défini' }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Secteur</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Secteur</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.secteur }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Salle</th>
+                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Salle</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                     {% for salles in atelier.salle %}
                         {{ salles.nom }}{% if not loop.last %}, {% endif %}
@@ -40,7 +40,7 @@
                 </td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Ressource</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Ressource</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                     {% for ressources in atelier.ressource %}
                         {{ ressources.type }}{% if not loop.last %}, {% endif %}
@@ -50,7 +50,7 @@
                 </td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Métier</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Métier</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                     {% for metiers in atelier.metier %}
                         {{ metiers.nom }}{% if not loop.last %}, {% endif %}
@@ -60,19 +60,22 @@
                 </td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de début</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de début</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateDebut ? atelier.getDateDebut()|date('d-m-Y') : 'Non défini' }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de fin</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Date de fin</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ atelier.getDateFin ? atelier.getDateFin()|date('d-m-Y') : 'Non défini' }}</td>
             </tr>
             </tbody>
         </table>
 
-        <div class="flex justify-start space-x-2 mt-4">
+        <div class="flex justify-end space-x-2 mt-4">
             <a href="{{ path('app_atelier_edit', {'id': atelier.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
-                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                <p>Edit {#<i class="fa-solid fa-pen-to-square fa-xl"></i>#}</p>
+            </a>
+            <a href="{{ path('app_atelier_delete', {'id': atelier.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white p-2 rounded">
+                <p>Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}</p>
             </a>
             {{ include('adminUser/atelier/_delete_form.html.twig') }}
         </div>
