--- a/templates/adminUser/competence/show.html.twig
+++ b/templates/adminUser/competence/show.html.twig
@@ -6,28 +6,31 @@
     <div class="max-w-5xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <div class="flex my-4">
             <a href="{{ path('app_competence_index') }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
-                <i class="fa-solid fa-arrow-left fa-xl"></i>
+                <p>Back {#<i class="fa-solid fa-arrow-left fa-xl"></i>#}</p>
             </a>
         </div>
-        <h1 class="text-2xl font-semibold mb-6 text-start">Compétence</h1>
+        <h1 class="text-2xl font-semibold mb-6 text-center">Compétence</h1>
 
-        <table class="min-w-full leading-normal">
+        <table class="min-w-full leading-normal mt-12 mb-12">
             <tbody>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ competence.id }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ competence.nom }}</td>
             </tr>
             </tbody>
         </table>
-        <div class="flex justify-start space-x-2 mt-4">
+        <div class="flex justify-end space-x-2 mt-4">
             <a href="{{ path('app_competence_edit', {'id': competence.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
-                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                <p>Edit {#<i class="fa-solid fa-pen-to-square fa-xl"></i>#}</p>
             </a>
-            {{ include('adminUser/competence/_delete_form.html.twig') }}
+            <a href="{{ path('app_metier_delete', {'id': competence.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white p-2 rounded">
+                Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}
+            </a>
+            {# {{ include('adminUser/competence/_delete_form.html.twig') }} #}
         </div>
     </div>
 {% endblock %}
