--- a/templates/adminUser/inscription/show.html.twig
+++ b/templates/adminUser/inscription/show.html.twig
@@ -6,48 +6,50 @@
     <div class="max-w-5xl mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <div class="flex my-4">
             <a href="{{ path('app_inscription_index') }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white p-2 rounded">
-                <i class="fa-solid fa-arrow-left fa-xl"></i>
+                <p>Back {#<i class="fa-solid fa-arrow-left fa-xl"></i>#}</p>
             </a>
         </div>
-        <h1 class="text-2xl font-semibold mb-6 text-start">Lycéen</h1>
+        <h1 class="text-2xl font-semibold mb-6 text-center">Lycéen</h1>
 
-        <table class="min-w-full leading-normal">
+        <table class="min-w-full leading-normal mt-12 mb-12">
             <tbody>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Id</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.id }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Téléphone</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Téléphone</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.telephone }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Date</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Date</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.date ? inscription.date|date('Y-m-d') : '' }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Nom</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.nom }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Prénom</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Prénom</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.prenom }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Lycée</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Lycée</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.lycee }}</td>
             </tr>
             <tr class="border-b">
-                <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Section</th>
+                <th class="px-5 py-3 border-b-1 border-gray-200 bg-gray-100 text-right w-64 text-xs font-semibold text-gray-600 uppercase tracking-wider">Section</th>
                 <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">{{ inscription.section }}</td>
             </tr>
             </tbody>
         </table>
-        <div class="flex justify-start space-x-2 mt-4">
+        <div class="flex justify-end space-x-2 mt-4">
             <a href="{{ path('app_inscription_edit', {'id': inscription.id}) }}" class="inline-block bg-yellow-500 hover:bg-yellow-700 text-white p-2 rounded">
-                <i class="fa-solid fa-pen-to-square fa-xl"></i>
+                <p>Edit {#<i class="fa-solid fa-pen-to-square fa-xl"></i>#}</p>
             </a>
-            {{ include('adminUser/inscription/_delete_form.html.twig') }}
+            <a href="{{ path('app_inscription_delete', {'id': inscription.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white p-2 rounded">
+                <p>Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}</p>
+            </a>
         </div>
 
     </div>
