--- a/templates/adminUser/salle/edit.html.twig
+++ b/templates/adminUser/salle/edit.html.twig
@@ -5,11 +5,11 @@
 {% block body %}
     <div class="max-w-md mx-auto my-8 p-6 bg-white rounded-md shadow-md">
         <a href="{{ path('app_salle_index') }}" class="inline-block my-4 bg-blue-500 hover:bg-blue-700 mt-4 text-white p-2 rounded">
-            <i class="fa-solid fa-arrow-left fa-xl"></i>
+            <p>Back {#<i class="fa-solid fa-arrow-left fa-xl"></i>#}</p>
         </a>
-        <h1 class="text-2xl font-semibold mb-6">Éditer une salle</h1>
+        <h1 class="text-2xl font-semibold mb-6 text-center">Éditer une salle</h1>
 
-        {{ include('adminUser/salle/_form.html.twig') }}
+        {% include "adminUser/salle/_form.html.twig" with {deleteBtn: true} %}
 
         {{ include('adminUser/salle/_delete_form.html.twig') }}
     </div>
