--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Symfony{% endblock %}</title>
         <link rel="icon" type="image/jpg" href="{{ asset('images/favicon.ico') }}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-lZ9Ld8FIP5CwPxH8JKf+V4LDDWwUPYExlbyEJURvq4zJ5Lqqe6r4s3LqUzV6eUjN" crossorigin="anonymous">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             {{ ux_controller_link_tags() }}
