--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -21,7 +21,7 @@
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                <button type="submit" class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none w-full shadow-md">
+                <button type="submit" class="bg-blue-500 text-white p-2 rounded-md hover:-600 focus:outline-none w-full shadow-md">
                     Connexion
                 </button>
                 <div class="mt-2">
