--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -32,9 +32,9 @@
         <div class="flex justify-center" style="width: auto; height: 500px;">
             <h1 class="text-3xl font-semibold text-center mb-6" style="position: absolute; top: 130px;">Nouveau ici ?</h1>
             <p class="text-center" style="width: 280px; position: absolute; top: 190px;">Inscrivez vous et découvrez un grand nombre de nouvelles opportunités !</p>
-            <button type="submit" class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none w-full shadow-md" style="width: 280px; position: absolute; top: 260px;">
-                    <a href="/register">S'inscrire</a>
-            </button>
+            <a href="{{ path('app_register') }}" type="submit" class="bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none w-full shadow-md" style="width: 280px; position: absolute; top: 260px;">
+                S'inscrire
+            </a>
             <img src="{{ asset("/images/pencil.jpg") }}" alt="crayons de couleur" style="object-fit: cover; border-top-right-radius: 6px; border-bottom-right-radius: 6px;">
         </div>
     </div>
