--- a/templates/adminUser/atelier/edit.html.twig
+++ b/templates/adminUser/atelier/edit.html.twig
@@ -9,7 +9,7 @@
         </a>
         <h1 class="text-2xl font-semibold mb-6 text-center">Éditer un atelier</h1>
 
-        {% include "'adminUser/atelier/_form.html.twig" with {deleteBtn: true} %}
+        {% include "adminUser/atelier/_form.html.twig" with {deleteBtn: true} %}
 
         {{ include('adminUser/atelier/_delete_form.html.twig') }}
     </div>
