--- a/templates/adminUser/metier/_form.html.twig
+++ b/templates/adminUser/metier/_form.html.twig
@@ -1,19 +1,19 @@
-{{ form_start(form, {'attr': {'class': 'space-y-6, mb-4, max-w-md, flex, justify-center'}}) }}
+{{ form_start(form, {'attr': {'class': 'space-y-6 mb-4'}}) }}
 {% for field in form %}
     {% if field.vars.name != '_token' %}
-        <div class="mb-4 float-left mr-8 pb-2">
+        <div class="mb-4">
             {{ form_label(field) }}
             {% if field.vars.full_name matches '/competence|activite/' %}
-                <div class="mt-2 w-6/12 float-left m-2">
+                <div class="mt-2">
                     {% for child in field %}
                         <div class="flex items-center mb-2">
-                            {{ form_widget(child, {'attr': {'class': 'shadow flex justify-around rounded min-w-full mr-2 py-2 px-3 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+                            {{ form_widget(child, {'attr': {'class': 'shadow border rounded mr-2 leading-tight focus:outline-none focus:shadow-outline'}}) }}
                             {{ form_label(child, null, {'label_attr': {'class': 'text-gray-700'}}) }}
                         </div>
                     {% endfor %}
                 </div>
             {% else %}
-                {{ form_widget(field, {'attr': {'class': 'flex justify-around shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
+                {{ form_widget(field, {'attr': {'class': 'shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
             {% endif %}
             {{ form_errors(field) }}
         </div>
@@ -21,16 +21,15 @@
         {{ form_widget(field, {'attr': {'class': 'hidden'}}) }}
     {% endif %}
 {% endfor %}
-        <div class="inline-flex justify-end space-x-2 mt-8 w-full">
-            <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mr-4">
-                Valider {#<i class="fa-solid fa-floppy-disk fa-xl"></i>#}
-            </button>
-            {% if deleteBtn %}
-                <a href="{{ path('app_metier_delete', {'id': metier.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded">
-                    Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}
-                </a>
-            {% endif %}
-            {# {{ include('adminUser/metier/_submit_form.html.twig') }}
-            {{ include('adminUser/metier/_delete_form.html.twig') }} #}
-        </div>
+
+<div class="inline-flex justify-end space-x-2 mt-8 w-full">
+    <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold p-2 rounded">
+        Valider {#<i class="fa-solid fa-floppy-disk fa-xl"></i>#}
+    </button>
+    {% if deleteBtn %}
+        <a href="{{ path('app_metier_delete', {'id': metier.id}) }}" onclick="return confirm('Are you sure you want to delete this item?');" class="inline-block bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded">
+            Delete {#<i class="fa-solid fa-trash fa-xl"></i>#}
+        </a>
+    {% endif %}
+</div>
 {{ form_end(form) }}
