--- a/templates/adminUser/secteur/_form.html.twig
+++ b/templates/adminUser/secteur/_form.html.twig
@@ -1,7 +1,7 @@
-{{ form_start(form, {'attr': {'class': 'space-y-6 , mb-4, max-w-md, flex, justify-center'}}) }}
+{{ form_start(form, {'attr': {'class': 'space-y-6 , mb-4'}}) }}
 {% for field in form %}
     {% if field.vars.name != '_token' %} {# Ne pas afficher le champ Token #}
-        <div class="mb-4 float-left mr-8 pb-2">
+        <div class="mb-4 mr-8 pb-2">
             {{ form_label(field) }}
             {{ form_widget(field, {'attr': {'class': 'shadow border rounded min-w-full mr-2 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'}}) }}
             {{ form_errors(field) }}
