--- a/templates/adminUser/section/_form.html.twig
+++ b/templates/adminUser/section/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'space-y-6, mb-4, max-w-md, flex, justify-center'}}) }}
+{{ form_start(form, {'attr': {'class': 'space-y-6, mb-4'}}) }}
 {% for field in form %}
     {% if field.vars.name != '_token' %} {# Ne pas afficher le champ Token #}
         <div class="mb-4">
