--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>{% block title %}Symfony{% endblock %}</title>
         <link rel="icon" type="image/jpg" href="{{ asset('images/favicon.ico') }}" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-lZ9Ld8FIP5CwPxH8JKf+V4LDDWwUPYExlbyEJURvq4zJ5Lqqe6r4s3LqUzV6eUjN" crossorigin="anonymous">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             {{ ux_controller_link_tags() }}
@@ -22,7 +21,7 @@
     <body>
         <div class="flex items-center justify-end gap-x-2 bg-blue-500 text-white text-xl">
             {% if app.user %}
-                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('homepage') }}">Accueil</a>
+                <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('all-articles') }}">Accueil</a>
                 {% if is_granted('ROLE_STUDENT') %}
                     <a class="p-2 border border-white rounded m-1 hover:bg-blue-700" href="{{ path('user-profile', {'id': app.user.getInscriptionId()}) }}">{{ app.user.email }}</a>
                 {% endif %}
